welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:7: error: value - is not a member of scala.collection.immutable.Range.Inclusive
	for ( x <- 0 to nums.length - ) {
                                    ^